RESOLVED FIXED228051
[iOS] [AX] Keyboard text candidates don't update when changing selection using Switch Control
https://bugs.webkit.org/show_bug.cgi?id=228051
Summary [iOS] [AX] Keyboard text candidates don't update when changing selection usin...
Wenson Hsieh
Reported 2021-07-17 16:34:08 PDT
Attachments
WIP for EWS (22.15 KB, patch)
2021-07-17 17:09 PDT, Wenson Hsieh
ews-feeder: commit-queue-
Fix macOS build (22.10 KB, patch)
2021-07-17 17:17 PDT, Wenson Hsieh
no flags
Patch (2.39 KB, patch)
2021-07-19 11:55 PDT, Wenson Hsieh
no flags
Radar WebKit Bug Importer
Comment 1 2021-07-17 16:34:18 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 2 2021-07-17 17:09:20 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 3 2021-07-17 17:17:55 PDT
Created attachment 433736 [details] Fix macOS build
Wenson Hsieh
Comment 4 2021-07-18 08:33:00 PDT
Comment on attachment 433736 [details] Fix macOS build Thanks for the review!
EWS
Comment 5 2021-07-18 08:41:44 PDT
Committed r280019 (239761@main): <https://commits.webkit.org/239761@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433736 [details].
Wenson Hsieh
Comment 6 2021-07-19 11:55:28 PDT
Reopening to attach new patch.
Wenson Hsieh
Comment 7 2021-07-19 11:55:29 PDT
EWS
Comment 8 2021-07-19 12:29:47 PDT
Committed r280041 (239776@main): <https://commits.webkit.org/239776@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433807 [details].
Note You need to log in before you can comment on or make changes to this bug.